--- a/settings.html
+++ b/settings.html
@@ -379,6 +379,86 @@
             </ul>
           </div>
         </div>
+        <div class="row">
+          <div class="col-12">
+            <div class="card">
+              <div class="card-header">
+                <h6>Login Information</h6>
+              </div>
+              <hr>
+              <div class="card-body">
+                <ul class="nav" id="infoTab" role="tablist">
+                  <li class="nav-item">
+                    <a class="btn btn-outline-primary mb-0 btn-sm active" id="email-tab" data-toggle="tab" href="#email"
+                      role="tab" aria-controls="email" aria-selected="true">
+                      User Email
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="btn btn-outline-primary mb-0 mx-1 btn-sm" id="password-tab" data-toggle="tab"
+                      href="#password" role="tab" aria-controls="password" aria-selected="false">
+                      Password
+                    </a>
+                  </li>
+                </ul>
+
+                <div class="tab-content mt-3" id="mainTabContent">
+                  <div class="tab-pane fade show active" id="email" role="tabpanel" aria-labelledby="email-tab">
+                    <form action="" method="post">
+                      <div class="row mb-3">
+                        <div class="col-md-4">
+                          <label>User Email</label>
+                        </div>
+                        <div class="col-md-8">
+                          <input type="email" name="" placeholder="Default Email" class="form-control" required />
+                        </div>
+                      </div>
+                      <div class="d-flex justify-content-end">
+                        <button type="submit" class="btn btn-primary btn-sm">Save</button>
+                      </div>
+                    </form>
+                  </div>
+
+                  <div class="tab-pane fade" id="password" role="tabpanel" aria-labelledby="password-tab">
+                    <form action="" method="post">
+                      <div class="row mb-3">
+                        <div class="col-md-4">
+                          <label>Current Password</label>
+                        </div>
+                        <div class="col-md-8">
+                          <input type="password" placeholder="Enter Current Password" class="form-control" required />
+                        </div>
+                      </div>
+
+                      <div class="row mb-3">
+                        <div class="col-md-4">
+                          <label>New Password</label>
+                        </div>
+                        <div class="col-md-8">
+                          <input type="password" placeholder="Enter New Password" class="form-control" required />
+                        </div>
+                      </div>
+
+                      <div class="row mb-3">
+                        <div class="col-md-4">
+                          <label>Confirm New Password</label>
+                        </div>
+                        <div class="col-md-8">
+                          <input type="password" placeholder="Confirm New Password" class="form-control" required />
+                        </div>
+                      </div>
+
+                      <div class="d-flex justify-content-end">
+                        <button type="submit" class="btn btn-primary btn-sm">Save</button>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
       </div>
       <footer class="main-footer">
         <div class="footer-left">
