--- a/view-advertisers.html
+++ b/view-advertisers.html
@@ -283,11 +283,11 @@
               <a href="index.html" class="nav-link"><i data-feather="monitor"></i><span>Dashboard</span></a>
             </li>
             <li class="menu-header">advertisers management</li>
-            <li class="dropdown">
+            <li class="dropdown active">
               <a href="#" class="menu-toggle nav-link has-dropdown"><i
                   data-feather="copy"></i><span>Advertisers</span></a>
               <ul class="dropdown-menu">
-                <li><a class="nav-link" href="./my-advertisers.html">My Advertisers</a></li>
+                <li class="active"><a class="nav-link" href="./my-advertisers.html">My Advertisers</a></li>
                 <li><a class="nav-link" href="#">New Advertisers</a></li>
                 <li><a class="nav-link" href="#">Find Advertisers</a></li>
               </ul>
@@ -329,10 +329,10 @@
               </ul>
             </li>
             <li class="menu-header">settings</li>
-            <li class="dropdown active">
+            <li class="dropdown ">
               <a href="#" class="menu-toggle nav-link has-dropdown"><i data-feather="copy"></i><span>Settings</span></a>
               <ul class="dropdown-menu">
-                <li class="active"><a class="nav-link" href="./my-profile.html">Profile</a></li>
+                <li><a class="nav-link" href="./my-profile.html">Profile</a></li>
                 <li><a class="nav-link" href="./webs.html">Websites</a></li>
                 <li class="dropdown">
                   <a href="#" class="has-dropdown">Payment Info</a>
